fixed align issue on titles

--- a/static/menu_simple.css
+++ b/static/menu_simple.css
@@ -66,7 +66,7 @@ a:active {
 }
 
 .nav-link {
-    font-size: 45px;
+    font-size: 41px;
     color: #212529;
     font-weight: bold;
     padding: 0 40px 0 30px;
